-Fence BGOs now can move player together with a moving layer as vine NPCs does
-Fixed the vanilla bug: attempt of player to jump from NPC standing together with getting pushed into the wall causes the clipping
-Fixed the vanilla bug: resolved an incorrect behavior of a skull raft cells that makes the raft being squished when reaching a barrier wall
-Credits look and performance has been improved

Changes for 1.3.3.1
-Fixed a crash, caused by the incremental locked warps counter that leads BGO array exciting
-Added support for Windows ARM64 target architecture
-Added support for Apple Silicon target architecture
-Fixed the inability to enter levels through warp were extension is missing

Changes for 1.3.3
-Added the "gameinfo.ini" to give the support for the partial customization of internals (window/game title, character names in menu, credits, etc.)
-Added an ability to globally override NPC settings by placing of npc-*.txt file into graphics/npc directlry of assets
-Added an ability to run executable with a different assets directory specified
-Added the support for playable character custom INI calibrations
-Message box line breaking algorithm has been improved, added support for new-line characters
-Settings now can remember the initial state of the frame-skip and show-fps options
-Added an option to make use the Alt-Run key for Yoshi's Ground-Pound ([gameplay] section and 'ground-pound-by-alt-run' boolean field)

Changes for 1.3.2.4
-Allow music change for outro level (if outro level has non-silent music, it will be played instead of built-in)
-Allow unlimited count of episodes and battle levels
-Fixed an incorrect effect frames count rounding, caused glitches at the death effect for a Hammer Bros.
-Corrected the sensitivity of axes-based sticks of game-pads to prevent the mystery, caused by value errors

Changes for 1.3.2.3
-Fixed a SIGFPE crash, caused by an attempt to load some custom effects